Updated colors and exposed as css variables

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,14 @@
     <div id="webcrafters-scoreboard"></div>
     <link href="/assets/style.css" type="text/css" rel="stylesheet" />
     <script type="application/javascript" src="/assets/score-board.umd.js"></script>
+    <style type="text/css">
+      :root #webcrafters-scoreboard {
+        --background: #9CDABC;
+        --prime: #007681;
+        --alt: #63666A;
+        --numbers: #CF578A;
+      }
+    </style>
 
     <pre style="margin: 20px; padding: 20px 20px; user-select: all; overflow: auto; background: #fefefe; color: blue; border-radius: 20px; box-shadow: 1px 1px 10px rgba(0,0,0,0.2)">
 &lt;div id=&quot;webcrafters-scoreboard&quot;&gt;&lt;/div&gt;
