--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 &lt;div id=&quot;webcrafters-scoreboard&quot;&gt;&lt;/div&gt;
 &lt;link href=&quot;https://webcrafters-scoreboard.web.app/assets/style.css&quot; type=&quot;text/css&quot; rel=&quot;stylesheet&quot; /&gt;
 &lt;script type=&quot;application/javascript&quot; src=&quot;https://webcrafters-scoreboard.web.app/assets/score-board.umd.js&quot;&gt;&lt;/script&gt;
+
+&lt;style type="text/css"&gt;
+  #webcrafters-scoreboard {
+    --background: #9CDABC;
+    --prime: #007681;
+    --alt: #63666A;
+    --numbers: #CF578A;
+  }
+&lt;/style&gt;
     </pre>
 
     <div>
