Added border and highlight

--- a/index.html
+++ b/index.html
@@ -7,21 +7,6 @@
     <title>LoQuiz Scoreboard</title>
   </head>
   <body>
-    <pre style="margin: 20px; padding: 20px 20px; user-select: all; overflow: auto; background: #fefefe; color: blue; border-radius: 10px; box-shadow: 1px 1px 10px rgba(0,0,0,0.2)">
-&lt;div id=&quot;webcrafters-scoreboard&quot;&gt;&lt;/div&gt;
-&lt;link href=&quot;https://webcrafters-scoreboard.web.app/assets/style.css&quot; type=&quot;text/css&quot; rel=&quot;stylesheet&quot; /&gt;
-&lt;script type=&quot;application/javascript&quot; src=&quot;https://webcrafters-scoreboard.web.app/assets/score-board.umd.js&quot;&gt;&lt;/script&gt;
-
-&lt;style type="text/css"&gt;
-  #webcrafters-scoreboard {
-    --background: #9CDABC;
-    --prime: #007681;
-    --alt: #63666A;
-    --numbers: #CF578A;
-  }
-&lt;/style&gt;
-    </pre>
-
     <div>
         <div id="webcrafters-scoreboard"></div>
         <script type="module" src="/src/main.ts"></script>
@@ -31,6 +16,16 @@
 &lt;div id=&quot;webcrafters-scoreboard&quot;&gt;&lt;/div&gt;
 &lt;link href=&quot;https://webcrafters-scoreboard.web.app/assets/style.css&quot; type=&quot;text/css&quot; rel=&quot;stylesheet&quot; /&gt;
 &lt;script type=&quot;application/javascript&quot; src=&quot;https://webcrafters-scoreboard.web.app/assets/score-board.umd.js&quot;&gt;&lt;/script&gt;
+&lt;style type="text/css"&gt;
+  #webcrafters-scoreboard {
+    --background: #9CDABC;
+    --prime: #007681;
+    --alt: #63666A;
+    --numbers: #CF578A;
+    --border: 2px solid #A7AAAE;
+    --highlighted: #8BC9AB;
+  }
+&lt;/style&gt;
     </pre>
   </body>
 </html>
